--- a/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
+++ b/Final_Project/src/userinterface/AnalysisMode/AnalysisMode.form
@@ -605,7 +605,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Container class="javax.swing.JPanel" name="jPanel16">
+                <Container class="javax.swing.JPanel" name="displayPanel5">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="25" green="19" red="d" type="rgb"/>
